tests/consecutive_errors.check
<error>
<error>
<error>

1,1: error: invalid character
	...
	^

1,2: error: invalid character
	...
	 ^

1,3: error: invalid character
	...
	  ^
